--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@heroicons/react": "^2.1.3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
@@ -22,7 +23,9 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "framer-motion": "^11.0.25",
     "postcss": "^8.4.38",
+    "react-icons": "^5.0.1",
     "react-scroll": "^1.9.0",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
