--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -25,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "framer-motion": "^11.0.25",
     "postcss": "^8.4.38",
+    "react-error-overlay": "^6.0.11",
     "react-icons": "^5.0.1",
     "react-scroll": "^1.9.0",
     "tailwindcss": "^3.4.3",
