--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emailjs/browser": "^4.3.3",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@heroicons/react": "^2.1.3",
@@ -27,7 +28,6 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "framer-motion": "^11.0.25",
     "postcss": "^8.4.38",
-    "react-error-overlay": "^6.0.11",
     "react-icons": "^5.0.1",
     "react-scroll": "^1.9.0",
     "tailwindcss": "^3.4.3",
